<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Settings</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="header_category_suggestions">Suggestions</string>
    <string name="header_category_quick_settings">Quick Settings</string>
    <string name="header_category_general_settings">General Settings</string>
    <string name="dismiss_suggestion">Dismiss the suggestion</string>
    <string name="hotwording_title">\"OK Google\" detection</string>
    <string name="hotwording_summary">Talk to Google Assistant anytime</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="connect_to_network">Connect to network</string>
    <string name="add_an_account">Add an account</string>
    <string name="accounts_category_title">Accounts &amp; sign-in</string>
    <string name="accounts_category_summary_no_account">No accounts</string>
    <plurals name="accounts_category_summary">
        <item quantity="one"><xliff:g id="accounts_number">%1$d</xliff:g> account</item>
        <item quantity="other"><xliff:g id="accounts_number">%1$d</xliff:g> accounts</item>
    </plurals>
    <string name="accounts_slice_summary">Media services, Assistant, Payments</string>
    <string name="connectivity_network_category_title">Network &amp; Internet</string>
    <string name="sound_category_title">Sound</string>
    <string name="applications_category_title">Apps</string>
    <string name="device_pref_category_title">Device Preferences</string>
    <string name="remotes_and_accessories_category_title">Remotes &amp; accessories</string>
    <string name="remotes_and_accessories_category_summary_no_bluetooth_device">No connected Bluetooth devices</string>
    <plurals name="remotes_and_accessories_category_summary">
        <item quantity="one"><xliff:g id="accessories_number">%1$d</xliff:g> accessory</item>
        <item quantity="other"><xliff:g id="accessories_number">%1$d</xliff:g> accessories</item>
    </plurals>
    <string name="display_and_sound_category_title">Display &amp; Sound</string>
    <string name="help_and_feedback_category_title">Help &amp; Feedback</string>
    <string name="privacy_category_title">Privacy</string>
    <string name="privacy_device_settings_category">Device Settings</string>
    <string name="privacy_app_settings_category">App Settings</string>
    <string name="privacy_category_summary">Location, Usage &amp; Diagnostics, Ads</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1$s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="connectivity_summary_ethernet_connected">Ethernet connected</string>
    <string name="connectivity_summary_no_network_connected">No network connected</string>
    <string name="connectivity_summary_wifi_disabled">Wi-Fi is turned off</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let Google\'s location service and other apps scan for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="connectivity_hint_message">Connect to network</string>
    <string name="apps_recently_used_category_title">Recently opened apps</string>
    <string name="apps_see_all_apps">See all apps</string>
    <string name="apps_permissions_category_title">Permissions</string>
    <string name="all_apps_title">All apps</string>
    <string name="all_apps_show_system_apps">Show system apps</string>
    <string name="all_apps_installed">Installed apps</string>
    <string name="all_apps_other">System apps</string>
    <string name="all_apps_disabled">Disabled apps</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_display_sound">Display &amp; Sound</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_sound_bootsafe">Enforce safe volume</string>
    <string name="device_sound_disable_volume">Disable the volume</string>
    <string name="device_bit_stream">Decode &#038; BitStream</string>
    <string name="hdmi">HDMI</string>
    <string name="device_apps">Applications</string>
    <string name="device_storage">Storage</string>
    <string name="device_reset">Factory reset</string>
    <string name="device_backup_restore">Backup &amp; restore</string>
    <string name="device_factory_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="device_energy_saver">Energy saver</string>
    <string name="surround_sound_select_formats">Select formats</string>
    <string name="surround_sound_category_title">Surround Sound</string>
    <string name="surround_sound_format_ac3">Dolby Digital</string>
    <string name="surround_sound_format_e_ac3">Dolby Digital Plus</string>
    <string name="surround_sound_format_dts">DTS</string>
    <string name="surround_sound_format_dts_hd">DTS-HD</string>
    <string name="surround_sound_format_iec61937">IEC61937</string>
    <string name="surround_sound_auto_info">Note: The Auto option may not work if your device does not report its supported formats correctly.</string>
    <string name="surround_sound_auto_summary">Auto: Use the formats that your device reports supporting (recommended)</string>
    <string name="surround_sound_none_summary">None: Never use surround sound</string>
    <string name="surround_sound_manual_summary">Manual: Select which formats to use</string>
    <string name="advanced_display_settings_title">Advanced display settings</string>
    <string name="advanced_sound_settings_title">Advanced sound settings</string>
    <string name="game_mode_title">Allow game mode</string>
    <string name="device_storage_clear_cache_title">Clear cached data?</string>
    <string name="device_storage_clear_cache_message">This will clear cached data for all apps.</string>
    <string name="accessories_add">Add accessory</string>
    <string name="accessory_state_pairing">Pairing&#8230;</string>
    <string name="accessory_state_connecting">Connecting&#8230;</string>
    <string name="accessory_state_error">Couldn\'t pair</string>
    <string name="accessory_state_canceled">Canceled</string>
    <string name="accessory_state_paired">Paired</string>
    <string name="accessory_options">Accessory</string>
    <string name="accessory_unpair">Unpair</string>
    <string name="accessory_battery">Battery <xliff:g id="percentage">%1$d</xliff:g>%%</string>
    <string name="accessory_unpairing">Unpairing device&#8230;</string>
    <string name="accessory_connected">Connected</string>
    <string name="accessory_change_name">Change name</string>
    <string name="accessory_change_name_title">Enter a new name for this accessory</string>
    <string name="accessories_add_title">Searching for accessories&#8230;</string>
    <string name="system_security">Security &amp; restrictions</string>
    <string name="system_diagnostic">Usage &amp; diagnostics</string>
    <string name="about_ads">Ads</string>
    <string name="not_connected">Not connected</string>
    <string name="wifi_setting_header_other_options">Other options</string>
    <string name="wifi_setting_see_all">See all</string>
    <string name="wifi_setting_available_networks">Available networks</string>
    <string name="wifi_setting_other_options_add_network">Add new network</string>
    <string name="title_wifi_proxy_settings">Proxy settings</string>
    <string name="title_wifi_ip_settings">IP settings</string>
    <string name="system_location">Location</string>
    <string name="device_energy_saver_screen_off">Turn off display</string>
    <string name="device_energy_saver_screen_off_description">After <xliff:g id="sleep_description" example="4 hours">%1$s</xliff:g></string>
    <string name="device_energy_saver_screen_off_dialog_title">Turn off display after</string>
    <string name="device_energy_saver_allow_turning_screen_off">Allow turning screen off</string>
    <string name="device_energy_saver_allow_turning_screen_off_description">During media playback</string>
    <string name="device_apps_permissions">App permissions</string>
    <string name="special_access">Special app access</string>
    <string name="title_data_saver">Data Saver</string>
    <string name="summary_data_saver">Automatically adjust video quality to use less mobile data</string>
    <string name="title_data_alert">Data usage and alerts</string>
    <string name="account_slice_uri" translatable="false"/>
    <string name="connected_devices_slice_uri" translatable="false"/>
    <string name="advance_settings">Advanced setting</string>
    <string name="fixed_rotation">Fixed rotation</string>
    <string name="hdmi_rotation">Rotation</string>
    <string name="display_category_title">Display</string>
    <string name="display">Display</string>
    <string name="resolution">Resolution</string>
    <string name="zoom">Zoom</string>
    <string name="color">Color</string>
    <string name="density">Density</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_rename">Rename</string>
    <string name="bluetooth_refresh">Refresh</string>
    <string name="bluetooth_received">Display received files</string>
    <string name="avaliable_bluetooth">Available bluetooth</string>
    <string name="bluetooth_paired">Paired devices</string>
    <string name="vpn" >VPN</string>
    <string name="create_vpn" >Create VPN</string>
    <string name="avaliable_vpns">Available vpns</string>
    <string name="hotpot_name">HotPot</string>
	<string name="usb_tethering_button_text">USB tethering</string>
	<string name="wifi_tether_checkbox_text">Portable Wi\u2011Fi hotspot</string>
	<string name="wifi_tether_configure_ap_text">Set up Wi\u2011Fi hotspot</string>
	<string name="bluetooth_tether_checkbox_text">Bluetooth tethering</string>
    <string name="cpu_title">CPU:</string>
    <string name="cpu_model">cpu curFrq:</string>
    <string name="cpu_usage">cpu usage:</string>
    <string name="cpu_temp">cpu temperature:</string>
    <string name="ram_title">RAM:</string>
    <string name="ram_total">ram total:</string>
    <string name="ram_usage">sys ram free:</string>
    <string name="network_title">Network:</string>
    <string name="network_speed">net speed:</string>
    <string name="network_mac">wifi mac:</string>
    <string name="network_mac2">ethernet mac:</string>
</resources>