<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/device_energy_saver">

    <com.android.tv.settings.device.display.daydream.DreamTimePreference
        android:key="sleepTime"
        android:persistent="true"
        android:title="@string/device_energy_saver_screen_off"
        android:summary="@string/device_energy_saver_screen_off_description"
        android:dialogTitle="@string/device_energy_saver_screen_off_dialog_title"
        android:entries="@array/screen_off_timeout_entries"
        android:entryValues="@array/screen_off_timeout_values" />

    <SwitchPreference
        android:key="allowTurnScreenOff"
        android:persistent="true"
        android:title="@string/device_energy_saver_allow_turning_screen_off"
        android:summary="@string/device_energy_saver_allow_turning_screen_off_description" />

</PreferenceScreen>
